--- a/tailwind/custom/base.css
+++ b/tailwind/custom/base.css
@@ -11,6 +11,23 @@
  * `theme.json` file and is applied both to the frontend and in the block
  * editor.
 */
+
+#hero ::-webkit-scrollbar {
+	/* Customize the scrollbar width */
+	width: 5px;
+	border-radius: 5px;
+}
+
+#her0 ::-webkit-scrollbar-track {
+	/* Customize the scrollbar track */
+	background-color: white;
+}
+
+#hero ::-webkit-scrollbar-thumb {
+	/* Customize the scrollbar thumb */
+	background-color: white;
+}
+
 body {
 	@apply bg-background text-foreground font-sans;
 }
@@ -26,6 +43,10 @@ p {
 	@apply font-montserrat italic font-light leading-[1.2];
 }
 
+img.icon {
+	@apply w-[45px] h-[45px];
+}
+
 img.img {
 	@apply border-4 border-white;
 }
@@ -36,4 +57,12 @@ section:not(.hero) {
 
 button.button {
 	@apply rounded-full border-white border-2 py-6 px-16 text-xl text-white font-semibold;
+}
+
+#site-navigation .menu li a {
+	@apply text-[20px] text-white px-[5px];
+}
+
+.footer-menu li a {
+	@apply text-white text-[30px] font-normal;
 }
